Added easy acces path in error Started working on change/password

--- a/modules/user/settings.json
+++ b/modules/user/settings.json
@@ -11,7 +11,8 @@
             "account": "account",
             "loginToken": "loginToken",
             "info": "info",
-            "displayName": "displayName"
+            "displayName": "displayName",
+            "oldPassword": "oldPassword"
         }
     },
     "letters": {
