Finished change/password

--- a/modules/user/settings.json
+++ b/modules/user/settings.json
@@ -12,7 +12,8 @@
             "loginToken": "loginToken",
             "info": "info",
             "displayName": "displayName",
-            "oldPassword": "oldPassword"
+            "oldPassword": "oldPassword",
+            "newPassword": "newPassword"
         }
     },
     "letters": {
