--- a/modules/user/settings.json
+++ b/modules/user/settings.json
@@ -4,7 +4,7 @@
             "userdatabase": "./files/userdatabase.json",
             "messages": "./messages/"
         },
-        "website": {
+        "online": {
             "email": "email",
             "password": "password",
             "deviceCookie": "deviceCookie",
