--- a/settings.json
+++ b/settings.json
@@ -7,7 +7,8 @@
                 "messages": "./messages/",
                 "api": "./api/",
                 "errors": "./errors/",
-                "files": "./files/",
+                "files": "./files",
+                "errorFile": "{files}/error/index.html",
                 "modules": "./modules/",
                 "moduleApi": "{modules}{name}/api/"
             },
