--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "js-sha256": "^0.9.0",
+    "mime-types": "^2.1.29",
     "sniffr": "^1.2.0"
   }
 }
