--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "js-sha256": "^0.9.0",
     "mime-types": "^2.1.29",
-    "sniffr": "^1.2.0"
+    "sniffr": "^1.2.0",
+    "typescript": "^4.2.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.35"
   }
 }
